# BillWise

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  analytics.py  analytics_routes.py  app.py  bills_output_clean_final1.csv  charts.py  cloudbuild.yaml  csv_writer.py  data_loader.py  env.yaml  evaluate_ocr.py  hybrid_ocr_adapter.py  ocr_pipeline.py  presentation_slides.md  pyproject.toml  readme_classification.md  requirements.txt  requirements_classification.txt  reset_csv.py  slides.md  utils.py  vision_test.py
.github/workflows/: ci.yml
OCR Evaluation/: JSON.rar
app/: main.py  schemas.py
apps/dashboard/: README.md  app.py  data_loader.py  requirements.txt  run_dashboard.py
apps/extractor_ui/: gradio_app.py
apps/twilio_ingestion/: app.py
categorizer/: __init__.py
chatbot/: __init__.py  csv_loader.py  query_engine.py  schema_probe.py  session_manager.py  sql_runner.py
checkpoints/: full_ft_distilbert_unweighted_best.pt
configs/: categorization.yaml  dashboard.yaml  extraction.yaml  storage.yaml
dashboard/: app.py  data_loader.py  eval_text_to_sql.py  query_executor.py  query_parser.py  text_to_sql.py
evaluation/: normalize.py  prototype_layoutlm_per_receipt.json  prototype_layoutlm_summary.json  vision_per_receipt.json  vision_summary.json
hybrid_ocr/: README.md
hybrid_ocr/app/: annotation_config.py  annotation_export.py  annotation_payload.py  hybrid_ui_payload.py  pipeline.py
hybrid_ocr/evaluation/: canonical.py  loaders.py  metrics.py
hybrid_ocr/extract/: line_items.py  regex_extractors.py
hybrid_ocr/kie/: label_mapper.py  layoutlm_infer.py
hybrid_ocr/methods/: hybrid_method.py  prototype_method.py
hybrid_ocr/ocr/: ocr_utils.py
hybrid_ocr/scripts/: evaluate_method.py  launch_gradio_ui.py
hybrid_ocr/ui/: gradio_app.py
legacy/categorization_module/: Abbreviation_Normalization.py
legacy/extraction_module/: requirements.txt
methods/: google_vision_regex.py
output/: formatter.py
results/: full_ft_distilbert_unweighted_results.json  full_ft_distilbert_weighted_results.json  linear_probe_distilbert_results.json  linear_probe_results.json  linear_probe_roberta_results.json  lora_distilbert_results.json  lora_distilbert_weighted_results.json  lora_roberta_results.json
scripts/: bootstrap_db.py  demo_phase2.py  demo_phase3_extraction.py  demo_phase4_categorization.py  doctor.py  evaluate_all.py  evaluate_hybrid.py  export_dashboard_views.py  export_layoutlm_annotations.py  export_retraining_feedback.py  run_billwise_pipeline.py  run_twilio_ingestion.py  test_gemini_sdk.py
src/: Abbreviation_Normalization.py  Categorization.py  Categorization_DataPrepTrain Final.ipynb
src/billwise.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: chat.css  chat.js  dashboard.css  dashboard.js
templates/: base_dashboard.html  categories.html  chat.html  items.html  overview.html  receipts.html  validation.html  vendors.html
tests/smoke/: test_phase2_persistence.py  test_phase3_transform.py  (+12 more)
(+58 files in other folders)
